[workspace]
members = [
  "lib/client",
  "lib/sdk",
  "programs/*",
]

[workspace.dependencies]
anchor-client = "0.28.0"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
solana-account-decoder = "~1.16"
solana-client = "~1.16"
solana-logger = "~1.17"
solana-program = "~1.17"
solana-program-test = "~1.17"
solana-rpc = "~1.17"
solana-sdk = "~1.17"
spl-associated-token-account = "1.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
