[workspace]
members = ["lib/client", "lib/sdk", "programs/*"]

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.10"
solana-account-decoder = "~1.18"
solana-client = "~1.18"
solana-logger = "~1.18"
solana-program = "~1.18"
solana-program-test = "~1.18"
solana-rpc = "~1.18"
solana-sdk = "~1.18"
solana-rpc-client = "~1.18"
solana-rpc-client-api = "~1.18"
spl-associated-token-account = "1.0.3"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
