[workspace]
members = ["lib/sdk", "programs/*"]

resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.10"
solana-account-decoder = "~2.0"
solana-client = "~2.0"
solana-logger = "~2.0"
solana-program = "~2.0"
solana-program-test = "~2.0"
solana-rpc = "~2.0"
solana-sdk = "~2.0"
solana-rpc-client = "~2.0"
solana-rpc-client-api = "~2.0"
spl-associated-token-account = "5.0.1"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3


[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
switchboard-solana = { git = "https://github.com/jup-ag/switchboard-solana-sdk.git", rev = "c04542c082ef2ef53b1f1e6926cb5a8132d7b4d7" }
